style: add file with variables

--- a/src/app/global.sass
+++ b/src/app/global.sass
@@ -1,3 +1,5 @@
+@import './styles/variable.sass'
+
 * 
 	box-sizing: border-box 
 	padding: 0 
@@ -9,8 +11,8 @@ body
 	overflow-x: hidden 
 
 body 
-	color: white 
-	background: #000 
+	color: $font-text-color 
+	background: $color-grey-light
     
 a 
 	color: inherit 
