style: change color variables

--- a/src/app/styles/variable.sass
+++ b/src/app/styles/variable.sass
@@ -1,9 +1,9 @@
 // Colors
-$color-dark-grey: rgba(68, 87, 89, 1)
-$color-grey: rgba(124, 138, 140, 1)
-$color-grey-light: rgba(191, 191, 191, 1)
-$color-dark-blue: rgba(33, 60, 63, 1)
-$color-dark: rgba(12, 12, 12, 1)
+$color-blue-light: rgba(0,186,200, 1)
+$color-grey: rgba(135,135,135, 1)
+$color-grey-light: rgb(255, 255, 255)
+$color-blue-dark: rgba(0,116,124, 1)
+$color-dark: rgba(31,31,33, 1)
 
 // Fonts
 $font-weight-bold:800
@@ -20,8 +20,8 @@ $font-line-height-heading: 1.2
 $font-letter-spacing-normal: normal
 $font-letter-spacing-wide: 1px
 
-$font-text-color: $color-dark 
-$font-heading-color: $color-dark-blue 
+$font-text-color: $color-grey-light 
+$font-heading-color: $color-blue-dark 
 
 // Spacing
 $spacing-small: 8px
@@ -31,7 +31,7 @@ $spacing-large: 24px
 // Border
 $border-width: 1px
 $border-style: solid
-$border-color: $color-dark-blue
+$border-color: $color-grey
 $border-radius: 4px
 
 // Breakpoints
