--- a/src/app/page.module.sass
+++ b/src/app/page.module.sass
@@ -1,7 +1,6 @@
 .main
   display: flex
   flex-direction: column
-  justify-content: space-between
-  align-items: center
-  padding: 6rem
+  justify-content: flex-start
+  align-items: flex-start
   min-height: 100vh
