--- a/src/app/components/Button/index.module.sass
+++ b/src/app/components/Button/index.module.sass
@@ -1,2 +1,8 @@
+@import  "../../styles/variable.sass"
+
+.button
+    width: 100%
+    height: 30px
     background:$color-blue-dark
     border-radius:$border-radius
+    cursor: pointer
