--- a/src/app/styles/variable.sass
+++ b/src/app/styles/variable.sass
@@ -10,9 +10,9 @@ $font-weight-bold:700
 $font-weight-semibold:500
 $font-weight-regular:400
 
-$font-size-base: 16px
-$font-size-small: 14px 
-$font-size-large: 18px 
+$font-size-small: 1em
+$font-size-base: 1.5em
+$font-size-large: 2em 
 
 $font-line-height-base: 1.5 
 $font-line-height-heading: 1.2
