--- a/src/app/register/layout.module.sass
+++ b/src/app/register/layout.module.sass
@@ -1,6 +1,9 @@
 .main
+  height:100%
+  width: 100%
   display: flex
   flex-direction: column
-  justify-content: flex-start
   align-items: flex-start
-  min-height: 100vh
+  justify-content: center
+  gap: 35px
+
