--- a/src/app/components/Input/index.module.sass
+++ b/src/app/components/Input/index.module.sass
@@ -1,30 +1,43 @@
 @import "../../styles/variable.sass"
 
 .container
+    width: 100%
     display: flex
     flex-direction: column
     align-items: flex-start
     justify-content: flex-start
+    gap: 2px
+    color: rgba(255, 255, 255,0.95)
+    opacity: 0.7
+
 
     .inputContainer
         display: flex
         align-items: center
         justify-content: space-between
+        width: 100%
         
         .icon
             position: absolute
-            font-size: 20px
+            font-size: 30px
 
         input 
             width: 100%
-            height: 30px
+            height: 50px
             border-left: none
             border-right: none
             border-top: none
             border-bottom: $border-width $border-style $border-color
+            color: $font-text-color
             background: none
-            padding-left: 30px 
+            padding-left: 40px
+            font-size: $font-size-small
 
             &:focus
                 outline: none
+            
+            &::placeholder
+                color: rgba(255, 255, 255,0.6)
+            
+                
             
