--- a/src/app/components/Button/index.module.sass
+++ b/src/app/components/Button/index.module.sass
@@ -2,7 +2,12 @@
 
 .button
     width: 100%
-    height: 30px
+    height: 50px
+    margin-top:5px
     background:$color-blue-dark
     border-radius:$border-radius
+    font-size: $font-size-small
+    color: $font-text-color
+    font-weight: $font-weight-bold
+    border: none
     cursor: pointer
