--- a/src/app/components/Input/index.module.sass
+++ b/src/app/components/Input/index.module.sass
@@ -1,20 +1,16 @@
 @import "../../styles/variable.sass"
+@import "../../styles/mixins.sass"
 
 .container
     width: 100%
-    display: flex
-    flex-direction: column
-    align-items: flex-start
-    justify-content: flex-start
+    @mixin flex($direction: column, $align:flex-start,$justify:flex-start)
     gap: 2px
     color: rgba(255, 255, 255,0.95)
     opacity: 0.7
 
 
     .inputContainer
-        display: flex
-        align-items: center
-        justify-content: space-between
+        @mixin flex($direction: column,$justify:space-between)
         width: 100%
         
         .icon
