--- a/src/app/components/Button/index.module.sass
+++ b/src/app/components/Button/index.module.sass
@@ -1,4 +1,5 @@
 @import  "../../styles/variable.sass"
+@import "../../styles/mixins.sass"
 
 .button
     width: 100%
@@ -6,8 +7,6 @@
     margin-top:5px
     background:$color-blue-dark
     border-radius:$border-radius
-    font-size: $font-size-small
-    color: $font-text-color
-    font-weight: $font-weight-bold
+    @include typografy-button-label()
     border: none
     cursor: pointer
