style: apply responsive media queries

--- a/src/app/components/Input/index.module.sass
+++ b/src/app/components/Input/index.module.sass
@@ -40,6 +40,16 @@
                 border-bottom-color: $color-blue-light
 
             &::placeholder
-                color: rgba(255, 255, 255,0.6)        
-                
-            
+                color: rgba(255, 255, 255,0.6)
+
+
+@media screen and (min-width: $breakpoint-lg)
+  
+  .container
+    .inputContainer
+        .icon
+            font-size: 25px
+
+        input
+            padding-left: 35px 
+            height: 35px      
