feat: add clamp in font variables

--- a/src/app/styles/variable.sass
+++ b/src/app/styles/variable.sass
@@ -10,9 +10,9 @@ $font-weight-bold:700
 $font-weight-semibold:500
 $font-weight-regular:400
 
-$font-size-small: 1em
-$font-size-base: 1.5em
-$font-size-large: 2em 
+$font-size-small: clamp(1.1rem,1vw + 0.1rem,1.2rem) 
+$font-size-base: clamp(1.3rem,3vw + 0.1rem,1.4rem)
+$font-size-large: clamp(1.5rem,6vw + 0.1rem,2rem) 
 
 $font-line-height-base: 1.5 
 $font-line-height-heading: 1.2
@@ -25,8 +25,8 @@ $font-heading-color: $color-blue-dark
 
 // Spacing
 $spacing-small: 8px
-$spacing-medium: 16px
-$spacing-large: 24px
+$spacing-medium: 34px
+$spacing-large: 42px
 
 // Border
 $border-width: 1px
